@@ -50,7 +50,9 @@
 package com.openexchange.mail.conversion;
 
 import static com.openexchange.mail.utils.MailFolderUtility.prepareMailFolderParam;
+import java.io.IOException;
 import java.io.InputStream;
+import java.util.Locale;
 import com.openexchange.ajax.requesthandler.AJAXRequestData;
 import com.openexchange.conversion.Data;
 import com.openexchange.conversion.DataArguments;
@@ -63,6 +65,7 @@ import com.openexchange.image.ImageDataSource;
 import com.openexchange.image.ImageLocation;
 import com.openexchange.image.ImageUtility;
 import com.openexchange.mail.FullnameArgument;
+import com.openexchange.mail.MailExceptionCode;
 import com.openexchange.mail.api.MailAccess;
 import com.openexchange.mail.dataobjects.MailPart;
 import com.openexchange.mail.mime.ContentType;
@@ -111,22 +114,34 @@ public final class InlineImageDataSource implements ImageDataSource {
     }
 
     private MailPart getImagePart(final int accountId, final String fullname, final String mailId, final String cid, final Session session) throws OXException {
-        final MailAccess<?, ?> mailAccess;
+        MailAccess<?, ?> mailAccess = null;
         try {
             mailAccess = MailAccess.getInstance(session, accountId);
             mailAccess.connect();
+            return loadImagePart(fullname, mailId, cid, mailAccess);
         } catch (final OXException e) {
-            throw new OXException(e);
-        }
-        try {
-            final MailPart imagePart = mailAccess.getMessageStorage().getImageAttachment(fullname, mailId, cid);
-            imagePart.loadContent();
-            return imagePart;
-        } catch (final OXException e) {
-            throw new OXException(e);
+            if ((null != mailAccess) && (MailExceptionCode.IO_ERROR.equals(e))) {
+                final Throwable cause = e.getCause();
+                if ((cause instanceof IOException) && "no content".equals(cause.getMessage().toLowerCase(Locale.ENGLISH))) {
+                    // Re-connect
+                    mailAccess.close(false);
+                    mailAccess = MailAccess.getInstance(session, accountId);
+                    mailAccess.connect();
+                    return loadImagePart(fullname, mailId, cid, mailAccess);
+                }
+            }
+            throw e;
         } finally {
-            mailAccess.close(true);
+            if (null != mailAccess) {
+                mailAccess.close(true);
+            }
         }
+    }
+
+    private MailPart loadImagePart(final String fullname, final String mailId, final String cid, final MailAccess<?, ?> mailAccess) throws OXException {
+        final MailPart imagePart = mailAccess.getMessageStorage().getImageAttachment(fullname, mailId, cid);
+        imagePart.loadContent();
+        return imagePart;
     }
 
     @Override
