@@ -49,9 +49,12 @@
 
 package com.openexchange.mail.conversion;
 
+import java.io.IOException;
 import java.io.InputStream;
+import java.util.Locale;
 import com.openexchange.conversion.DataSource;
 import com.openexchange.exception.OXException;
+import com.openexchange.mail.MailExceptionCode;
 import com.openexchange.mail.api.MailAccess;
 import com.openexchange.mail.dataobjects.MailPart;
 import com.openexchange.session.Session;
@@ -83,22 +86,34 @@ public abstract class MailPartDataSource implements DataSource {
     }
 
     protected final MailPart getMailPart(final int accountId, final String fullname, final String mailId, final String sequenceId, final Session session) throws OXException {
-        final MailAccess<?, ?> mailAccess;
+        MailAccess<?, ?> mailAccess = null;
         try {
             mailAccess = MailAccess.getInstance(session, accountId);
             mailAccess.connect();
+            return loadPart(fullname, mailId, sequenceId, mailAccess);
         } catch (final OXException e) {
-            throw new OXException(e);
-        }
-        try {
-            final MailPart mailPart = mailAccess.getMessageStorage().getAttachment(fullname, mailId, sequenceId);
-            mailPart.loadContent();
-            return mailPart;
-        } catch (final OXException e) {
-            throw new OXException(e);
+            if ((null != mailAccess) && (MailExceptionCode.IO_ERROR.equals(e))) {
+                final Throwable cause = e.getCause();
+                if ((cause instanceof IOException) && "no content".equals(cause.getMessage().toLowerCase(Locale.ENGLISH))) {
+                    // Re-connect
+                    mailAccess.close(false);
+                    mailAccess = MailAccess.getInstance(session, accountId);
+                    mailAccess.connect();
+                    return loadPart(fullname, mailId, sequenceId, mailAccess);
+                }
+            }
+            throw e;
         } finally {
-            mailAccess.close(true);
+            if (null != mailAccess) {
+                mailAccess.close(true);
+            }
         }
+    }
+
+    private MailPart loadPart(final String fullname, final String mailId, final String sequenceId, MailAccess<?, ?> mailAccess) throws OXException {
+        final MailPart mailPart = mailAccess.getMessageStorage().getAttachment(fullname, mailId, sequenceId);
+        mailPart.loadContent();
+        return mailPart;
     }
 
     @Override
