@@ -1,3 +1,7 @@
+* 2012-07-17 - thorben.betten@open-xchange.com
+
+ - Fix for bug 22548: Handle special "No content" I/O error thrown by JavaMail if IMAP session is in an inconsistent state
+
 * 2012-07-16 - marcus.klein@open-xchange.com
 
  - Fix for bug 22563: Restored previous java runtime dependencies that selects a supported JVM on each RPM distribution.
